# opencode-llm-wiki

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  MIGRATION.md  MIGRATION_COMMANDS.md  README.md  SKILL.md  TODO.md  merge-commands.sh  migrate-commands.sh  migrate.sh  opencode-commands.json  pyproject.toml  setup.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: test.yml
agent/: config.json
agent/scripts/: build-links-graph.py  generate-moc-index.py  generate-tags-index.py  graph-analyze.py  graph-suggest-links.py  index-tags.py  tfidf-suggest.py
commands/: wiki-analyze.md  wiki-ingest.md  wiki-lint.md  wiki-reindex.md  wiki-research.md
tests/: run-tests.sh  test_analyze_apply.py  test_dates_index.py  test_empty_vault.py  test_graph_analyze.py  test_graph_build.py  test_graph_suggest.py  test_index_tags.py  test_ingest.py  test_lint.py  test_moc_create.py  test_moc_index.py  test_no_config.py  test_process_note.py  test_research.py  test_tags_index.py  test_tfidf_suggest.py
tests/eval/: eval-harness.py
tests/eval/scenarios/: analyze-link-format.yaml  analyze-preview.yaml  analyze-reject.yaml  process-note-limit.yaml  research-schema.yaml  safety-templates.yaml
tests/fixtures/vault/atoms/: 202501010001 Здоровое питание.md  202501010002 Спорт и тренировки.md  (+22 more)
wiki/: config.json
wiki/scripts/: build-links-graph.py  find-needs-processing.py  generate-moc-index.py  generate-tags-index.py  graph-analyze.py  graph-suggest-links.py  index-dates.py  index-tags.py  tfidf-suggest.py
(+10 files in other folders)
